--- a/vanillaJS/style.css
+++ b/vanillaJS/style.css
@@ -6,16 +6,17 @@
 
 body {
     height: 100vh;
-    display:  flex;
+    display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    background: linear-gradient(rgb(47,150,163), rgb(48, 62, 143));
+    background: linear-gradient(rgb(47, 150, 163), rgb(48, 62, 143));
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: white;
 }
 
-.location, .temperature {
+.location,
+.temperature {
     height: 40vh;
     width: 50%;
     display: flex;
